[gd_scene load_steps=3 format=3 uid="uid://boj5qgtu3a4n8"]

[ext_resource type="Script" path="res://Scenes/enemy.gd" id="1_1gjuu"]
[ext_resource type="Texture2D" uid="uid://20w3sjsg4rmd" path="res://Assets/Enemies/tile_0000.png" id="2_u3l0t"]

[node name="Enemy Down" type="Area2D"]
collision_layer = 16
collision_mask = 15
script = ExtResource("1_1gjuu")

[node name="body" type="Sprite2D" parent="."]
light_mask = 16
texture = ExtResource("2_u3l0t")

[node name="LaserShoot" type="Marker2D" parent="."]
position = Vector2(0, 26)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-9, -8, -9, 6, 0, 12, 9, 5, 9, -8)

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="LeaveTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="LeaveTimer" to="." method="_on_leave_timer_timeout"]
